--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -7,6 +7,8 @@
     :root {
       --border-light: rgba(255, 255, 255, 0.15);
       --focus-highlight: #808080; /* Grey color for focus highlight */
+      --scrollbar-color: #333333; /* Dark grey for scrollbar */
+      --scrollbar-track: #252525; /* Even darker for the scrollbar track */
     }
 
     body {
@@ -17,6 +19,32 @@
       display: flex;
       background-color: #000;
       color: #fff;
+    }
+
+    /* Custom scrollbar styling for all scrollable elements */
+    ::-webkit-scrollbar {
+      width: 10px;
+      height: 10px;
+    }
+
+    ::-webkit-scrollbar-track {
+      background: var(--scrollbar-track);
+      border-radius: 5px;
+    }
+
+    ::-webkit-scrollbar-thumb {
+      background: var(--scrollbar-color);
+      border-radius: 5px;
+    }
+
+    ::-webkit-scrollbar-thumb:hover {
+      background: #555555;
+    }
+
+    /* For Firefox */
+    * {
+      scrollbar-width: thin;
+      scrollbar-color: var(--scrollbar-color) var(--scrollbar-track);
     }
 
     /* History Sidebar */
@@ -70,10 +98,60 @@
       border-radius: 5px;
       cursor: pointer;
       transition: background 0.2s;
+      position: relative; /* Added for positioning the delete button */
     }
 
     .chat-history li:hover {
       background: #3d3d3d;
+    }
+
+    /* Delete Button Styles */
+    .delete-btn {
+      position: absolute;
+      right: 8px;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      background-color: transparent;
+      border: none;
+      cursor: pointer;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      opacity: 1; /* Always visible now, changed from 0 */
+      transition: all 0.2s ease;
+    }
+
+    /* X symbol with red lines and white outline */
+    .delete-btn::before,
+    .delete-btn::after {
+      content: '';
+      position: absolute;
+      width: 14px;
+      height: 2px;
+      background-color: #ff3333; /* Red color */
+      border: 1px solid white; /* White outline */
+      border-radius: 1px;
+    }
+
+    .delete-btn::before {
+      transform: rotate(45deg);
+    }
+
+    .delete-btn::after {
+      transform: rotate(-45deg);
+    }
+
+    /* Delete button hover effect */
+    .delete-btn:hover {
+      transform: translateY(-50%) scale(1.2);
+    }
+
+    /* Active state for delete button */
+    .delete-btn:active {
+      transform: translateY(-50%) scale(0.9);
     }
 
     /* Main Content */
@@ -97,7 +175,7 @@
     .container {
       text-align: center;
       width: 100%;
-      max-width: 800px;
+      max-width: 900px; /* Increased from 800px for wider chat box */
     }
 
     h2 {
@@ -108,13 +186,16 @@
     #chat {
       border: 1px solid var(--border-light, currentColor);
       border-radius: 5px;
-      padding: 1em;
-      height: 300px;
+      padding: 1.5em; /* Increased padding for more space */
+      height: 390px; /* Increased by 30% from 300px */
       overflow-y: auto;
       margin-bottom: 1em;
       background: #18181b;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
       color: #fff;
+      width: calc(100% - 3em); /* Account for padding */
+      margin-left: auto;
+      margin-right: auto;
     }
 
     .user {
@@ -214,6 +295,91 @@
     .toggle-button:hover svg {
       fill: #fff;
     }
+
+    /* Modal styles for confirmation dialog */
+    .modal-overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.7);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 1000;
+      opacity: 0;
+      visibility: hidden;
+      transition: all 0.3s ease;
+    }
+
+    .modal-overlay.active {
+      opacity: 1;
+      visibility: visible;
+    }
+
+    .modal-content {
+      background-color: #252525;
+      border-radius: 8px;
+      padding: 24px;
+      width: 90%;
+      max-width: 400px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
+      transform: translateY(-20px);
+      transition: transform 0.3s ease;
+    }
+
+    .modal-overlay.active .modal-content {
+      transform: translateY(0);
+    }
+
+    .modal-header {
+      margin-bottom: 16px;
+    }
+
+    .modal-header h3 {
+      margin: 0;
+      color: #f87171;
+      font-size: 18px;
+    }
+
+    .modal-body {
+      margin-bottom: 24px;
+    }
+
+    .modal-footer {
+      display: flex;
+      justify-content: flex-end;
+      gap: 12px;
+    }
+
+    .modal-btn {
+      padding: 10px 16px;
+      border-radius: 4px;
+      border: none;
+      font-weight: 500;
+      cursor: pointer;
+      transition: all 0.2s;
+    }
+
+    .modal-btn-secondary {
+      background-color: transparent;
+      color: #d3d3d3;
+      border: 1px solid #404040;
+    }
+
+    .modal-btn-secondary:hover {
+      background-color: #404040;
+    }
+
+    .modal-btn-danger {
+      background-color: #DC2626;
+      color: white;
+    }
+
+    .modal-btn-danger:hover {
+      background-color: #B91C1C;
+    }
   </style>
 </head>
 <body>
@@ -244,10 +410,33 @@
     </div>
   </div>
 
+  <!-- Confirmation Modal -->
+  <div class="modal-overlay" id="confirm-modal">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h3>Confirm Delete</h3>
+      </div>
+      <div class="modal-body">
+        <p>Are you sure you would like to delete this history? This action cannot be undone.</p>
+      </div>
+      <div class="modal-footer">
+        <button class="modal-btn modal-btn-secondary" id="cancel-delete">No, keep</button>
+        <button class="modal-btn modal-btn-danger" id="confirm-delete">Yes, delete</button>
+      </div>
+    </div>
+  </div>
+
   <script>
     const historyPanel = document.getElementById("history-panel");
     const mainContent = document.getElementById("main-content");
     const toggleButton = document.getElementById("toggle-button");
+    const confirmModal = document.getElementById("confirm-modal");
+    const confirmDeleteBtn = document.getElementById("confirm-delete");
+    const cancelDeleteBtn = document.getElementById("cancel-delete");
+    const messageInput = document.getElementById("message");
+
+    // Variable to store the index of the item to delete
+    let itemToDeleteIndex = null;
 
     async function fetchHistory() {
       try {
@@ -260,17 +449,98 @@
         const history = await res.json();
         console.log("Fetched history:", history);
 
-        const chatHistoryElement = document.getElementById("chat-history");
-        chatHistoryElement.innerHTML = ""; // Clear previous history
-
-        history.forEach((item, index) => {
-          const li = document.createElement("li");
-          li.textContent = `Chat ${index + 1}`;
-          li.onclick = () => displayChat(item);
-          chatHistoryElement.appendChild(li);
-        });
+        renderHistory(history);
       } catch (error) {
         console.error("Error fetching history:", error);
+      }
+    }
+
+    function renderHistory(history) {
+      const chatHistoryElement = document.getElementById("chat-history");
+      chatHistoryElement.innerHTML = ""; // Clear previous history
+
+      // Check if history contains a hint (error message)
+      if (history.length === 1 && history[0].hint) {
+        const li = document.createElement("li");
+        li.textContent = `Error: ${history[0].hint}`;
+        chatHistoryElement.appendChild(li);
+        return;
+      }
+
+      history.forEach((item, index) => {
+        const li = document.createElement("li");
+        li.textContent = `Chat ${index + 1}`;
+        li.dataset.index = index; // Store the index as a data attribute
+
+        // Create delete button
+        const deleteBtn = document.createElement("button");
+        deleteBtn.className = "delete-btn";
+        deleteBtn.setAttribute("aria-label", "Delete chat");
+
+        // Prevent click event from bubbling to the li element
+        deleteBtn.onclick = (e) => {
+          e.stopPropagation();
+          showDeleteConfirmation(index);
+        };
+
+        li.appendChild(deleteBtn);
+
+        // Set click event on li to display chat
+        li.onclick = () => displayChat(item);
+
+        chatHistoryElement.appendChild(li);
+      });
+    }
+
+    function showDeleteConfirmation(index) {
+      itemToDeleteIndex = index;
+      confirmModal.classList.add("active");
+    }
+
+    function hideDeleteConfirmation() {
+      confirmModal.classList.remove("active");
+      itemToDeleteIndex = null;
+    }
+
+    // Set up event listeners for modal buttons
+    confirmDeleteBtn.addEventListener("click", () => {
+      if (itemToDeleteIndex !== null) {
+        deleteHistoryItem(itemToDeleteIndex);
+      }
+      hideDeleteConfirmation();
+    });
+
+    cancelDeleteBtn.addEventListener("click", hideDeleteConfirmation);
+
+    // Close modal if clicking outside of it
+    confirmModal.addEventListener("click", (e) => {
+      if (e.target === confirmModal) {
+        hideDeleteConfirmation();
+      }
+    });
+
+    async function deleteHistoryItem(index) {
+      try {
+        // Show loading state or disable the button here if needed
+
+        const res = await fetch(`/api/history/${index}`, {
+          method: 'DELETE',
+        });
+
+        if (!res.ok) {
+          const errorData = await res.json();
+          throw new Error(errorData.message || `Failed to delete: ${res.status}`);
+        }
+
+        const data = await res.json();
+        console.log("Delete response:", data);
+
+        // Refresh history after successful deletion
+        fetchHistory();
+
+      } catch (error) {
+        console.error("Error deleting history item:", error);
+        alert(`Failed to delete history item: ${error.message}`);
       }
     }
 
@@ -289,23 +559,55 @@
       chat.innerHTML += `<p class="user"><b>You:</b> ${msg}</p>`;
       input.value = "";
 
-      const res = await fetch("/api/chat", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ message: msg }),
-      });
+      try {
+        const res = await fetch("/api/chat", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ message: msg }),
+        });
 
-      const data = await res.json();
-      chat.innerHTML += `<p class="bot"><b>AI:</b> ${data.response}</p>`;
-      chat.scrollTop = chat.scrollHeight;
+        if (!res.ok) {
+          throw new Error(`API error: ${res.status}`);
+        }
 
-      fetchHistory(); // Refresh history
+        const data = await res.json();
+        chat.innerHTML += `<p class="bot"><b>AI:</b> ${data.response}</p>`;
+        chat.scrollTop = chat.scrollHeight;
+
+        // Refresh history to show the new chat
+        fetchHistory();
+      } catch (error) {
+        console.error("Error sending message:", error);
+        chat.innerHTML += `<p class="bot" style="color: #f87171;"><b>Error:</b> Failed to get response. Please try again.</p>`;
+        chat.scrollTop = chat.scrollHeight;
+      }
     }
+
+    // Handle Enter key to send messages
+    messageInput.addEventListener("keypress", function(event) {
+      if (event.key === "Enter" && !event.shiftKey) {
+        event.preventDefault(); // Prevent default to avoid newline
+        sendMessage();
+      }
+    });
 
     function toggleHistory() {
       historyPanel.classList.toggle("expanded");
       mainContent.classList.toggle("with-expanded-history");
     }
+
+    // Handle Escape key to close modal
+    document.addEventListener("keydown", (e) => {
+      if (e.key === "Escape" && confirmModal.classList.contains("active")) {
+        hideDeleteConfirmation();
+      }
+    });
+
+    // Auto-resize textarea based on content
+    messageInput.addEventListener("input", function() {
+      this.style.height = "auto"; // Reset height
+      this.style.height = (this.scrollHeight) + "px"; // Set to scroll height
+    });
 
     window.onload = fetchHistory; // Load history on page load
   </script>
