Add improved history pagination, split html and css files

--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -603,328 +603,7 @@
     </div>
   </div>
 
-  <script>
-    const historyPanel = document.getElementById("history-panel");
-    const mainContent = document.getElementById("main-content");
-    const dropdownContainer = document.getElementById("dropdown-container");
-    const toggleButton = document.getElementById("toggle-button");
-    const confirmModal = document.getElementById("confirm-modal");
-    const confirmDeleteBtn = document.getElementById("confirm-delete");
-    const cancelDeleteBtn = document.getElementById("cancel-delete");
-    const messageInput = document.getElementById("message");
-    const chatBox = document.getElementById("chat");
-    const dropdownMenu = document.getElementById("dropdown-menu");
-
-    // Configure marked.js options
-    marked.setOptions({
-      highlight: function(code, lang) {
-        const language = hljs.getLanguage(lang) ? lang : 'plaintext';
-        return hljs.highlight(code, { language }).value;
-      },
-      langPrefix: 'hljs language-', // CSS language prefix
-      breaks: true, // Add line breaks
-      gfm: true, // GitHub Flavored Markdown
-    });
-
-    // Variable to store the index of the item to delete
-    let itemToDeleteIndex = null;
-
-    function toggleDropdown() {
-      dropdownMenu.classList.toggle("show");
-    }
-
-    // Close the dropdown if clicked outside
-    window.onclick = function(event) {
-      if (!event.target.matches('.dropdown-button')) {
-        if (dropdownMenu.classList.contains('show')) {
-          dropdownMenu.classList.remove('show');
-        }
-      }
-    }
-
-    function newChat() {
-      // Clear the chat box
-      clearChatBox();
-
-      // Hide the dropdown
-      dropdownMenu.classList.remove('show');
-    }
-
-    function clearChatBox() {
-      chatBox.innerHTML = '';
-      messageInput.value = '';
-      messageInput.focus();
-    }
-
-    async function fetchHistory() {
-      try {
-        console.log("Fetching history...");
-        const res = await fetch("/api/history");
-        console.log("Response status:", res.status);
-
-        if (!res.ok) throw new Error(`Failed to fetch history: ${res.status}`);
-
-        const history = await res.json();
-        console.log("Fetched history:", history);
-
-        renderHistory(history);
-      } catch (error) {
-        console.error("Error fetching history:", error);
-      }
-    }
-
-    // Function to create a short summary from user question
-    function createSummary(text, maxLength = 15) {
-      if (!text) return "Chat";
-
-      // Remove HTML tags if any
-      text = text.replace(/<[^>]*>/g, '');
-
-      // Trim and create summary
-      text = text.trim();
-      if (text.length <= maxLength) {
-        return text;
-      } else {
-        return text.substring(0, maxLength) + "...";
-      }
-    }
-
-    function renderHistory(history) {
-      const chatHistoryElement = document.getElementById("chat-history");
-      chatHistoryElement.innerHTML = ""; // Clear previous history
-
-      // Check if history contains a hint (error message)
-      if (history.length === 1 && history[0].hint) {
-        const li = document.createElement("li");
-        li.textContent = `Error: ${history[0].hint}`;
-        chatHistoryElement.appendChild(li);
-        return;
-      }
-
-      history.forEach((item, index) => {
-        const li = document.createElement("li");
-        // Create a summary from the user's question
-        const summary = createSummary(item.user);
-        li.textContent = summary;
-        li.dataset.index = index; // Store the index as a data attribute
-
-        // Add title for full text on hover
-        li.title = item.user;
-
-        // Create delete button
-        const deleteBtn = document.createElement("button");
-        deleteBtn.className = "delete-btn";
-        deleteBtn.setAttribute("aria-label", "Delete chat");
-
-        // Prevent click event from bubbling to the li element
-        deleteBtn.onclick = (e) => {
-          e.stopPropagation();
-          showDeleteConfirmation(index);
-        };
-
-        li.appendChild(deleteBtn);
-
-        // Set click event on li to display chat
-        li.onclick = () => displayChat(item);
-
-        chatHistoryElement.appendChild(li);
-      });
-    }
-
-    function showDeleteConfirmation(index) {
-      itemToDeleteIndex = index;
-      confirmModal.classList.add("active");
-    }
-
-    function hideDeleteConfirmation() {
-      confirmModal.classList.remove("active");
-      itemToDeleteIndex = null;
-    }
-
-    // Set up event listeners for modal buttons
-    confirmDeleteBtn.addEventListener("click", () => {
-      if (itemToDeleteIndex !== null) {
-        deleteHistoryItem(itemToDeleteIndex);
-      }
-      hideDeleteConfirmation();
-    });
-
-    cancelDeleteBtn.addEventListener("click", hideDeleteConfirmation);
-
-    // Close modal if clicking outside of it
-    confirmModal.addEventListener("click", (e) => {
-      if (e.target === confirmModal) {
-        hideDeleteConfirmation();
-      }
-    });
-
-    async function deleteHistoryItem(index) {
-      try {
-        // Show loading state or disable the button here if needed
-
-        const res = await fetch(`/api/history/${index}`, {
-          method: 'DELETE',
-        });
-
-        if (!res.ok) {
-          const errorData = await res.json();
-          throw new Error(errorData.message || `Failed to delete: ${res.status}`);
-        }
-
-        const data = await res.json();
-        console.log("Delete response:", data);
-
-        // Clear the chat box if the currently displayed chat was deleted
-        clearChatBox();
-
-        // Refresh history after successful deletion
-        fetchHistory();
-
-      } catch (error) {
-        console.error("Error deleting history item:", error);
-        alert(`Failed to delete history item: ${error.message}`);
-      }
-    }
-
-    // Function to display a chat message with proper formatting
-    function displayChat(item) {
-      chatBox.innerHTML = '';
-
-      // Add user message
-      addMessageToChat('user', item.user);
-
-      // Add bot message with markdown parsing
-      addMessageToChat('bot', item.bot, true);
-
-      // Scroll to bottom
-      chatBox.scrollTop = chatBox.scrollHeight;
-    }
-
-    // Helper function to add a formatted message to the chat
-    function addMessageToChat(role, content, parseMarkdown = false) {
-      const messageDiv = document.createElement('div');
-      messageDiv.className = `message ${role}`;
-
-      // Add header with role label
-      const headerDiv = document.createElement('div');
-      headerDiv.className = 'message-header';
-      headerDiv.textContent = role === 'user' ? 'You:' : 'AI:';
-      messageDiv.appendChild(headerDiv);
-
-      // Add content
-      const contentDiv = document.createElement('div');
-      contentDiv.className = 'message-content';
-
-      if (parseMarkdown) {
-        // Parse markdown content
-        contentDiv.innerHTML = marked.parse(content);
-      } else {
-        contentDiv.textContent = content;
-      }
-
-      messageDiv.appendChild(contentDiv);
-      chatBox.appendChild(messageDiv);
-
-      // Apply syntax highlighting to code blocks
-      document.querySelectorAll('pre code').forEach((block) => {
-        hljs.highlightElement(block);
-      });
-    }
-
-    async function sendMessage() {
-      const msg = messageInput.value;
-
-      if (!msg.trim()) return; // Prevent sending empty messages
-
-      // Add user message
-      addMessageToChat('user', msg);
-      messageInput.value = "";
-
-      try {
-        const res = await fetch("/api/chat", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ message: msg }),
-        });
-
-        if (!res.ok) {
-          throw new Error(`API error: ${res.status}`);
-        }
-
-        const data = await res.json();
-
-        // Add bot response with markdown parsing
-        addMessageToChat('bot', data.response, true);
-
-        chatBox.scrollTop = chatBox.scrollHeight;
-
-        // Refresh history to show the new chat
-        fetchHistory();
-      } catch (error) {
-        console.error("Error sending message:", error);
-
-        // Add error message
-        const errorDiv = document.createElement('div');
-        errorDiv.className = 'message bot';
-        errorDiv.innerHTML = `<div class="message-header">AI:</div>
-                            <div class="message-content" style="color: #f87171;">
-                              <b>Error:</b> Failed to get response. Please try again.
-                            </div>`;
-        chatBox.appendChild(errorDiv);
-
-        chatBox.scrollTop = chatBox.scrollHeight;
-      }
-    }
-
-    // Handle Enter key to send messages
-    messageInput.addEventListener("keypress", function(event) {
-      if (event.key === "Enter" && !event.shiftKey) {
-        event.preventDefault(); // Prevent default to avoid newline
-        sendMessage();
-      }
-    });
-
-    function toggleHistory() {
-      historyPanel.classList.toggle("expanded");
-      mainContent.classList.toggle("with-expanded-history");
-
-      // Also toggle the dropdown position
-      dropdownContainer.classList.toggle("with-expanded-history");
-    }
-
-    // Handle Escape key to close modal
-    document.addEventListener("keydown", (e) => {
-      if (e.key === "Escape" && confirmModal.classList.contains("active")) {
-        hideDeleteConfirmation();
-      }
-    });
-
-    // Auto-resize textarea based on content
-    messageInput.addEventListener("input", function() {
-      this.style.height = "auto"; // Reset height
-      this.style.height = (this.scrollHeight) + "px"; // Set to scroll height
-    });
-
-    window.onload = function() {
-      fetchHistory(); // Load history on page load
-
-      // Initialize marked settings
-      marked.setOptions({
-        renderer: new marked.Renderer(),
-        highlight: function(code, language) {
-          if (language && hljs.getLanguage(language)) {
-            return hljs.highlight(code, { language }).value;
-          }
-          return hljs.highlightAuto(code).value;
-        },
-        pedantic: false,
-        gfm: true,
-        breaks: true,
-        sanitize: false,
-        smartypants: false,
-        xhtml: false
-      });
-    };
-  </script>
+  <!-- Include the external JavaScript file -->
+  <script src="script.js"></script>
 </body>
 </html>
